--- a/templates/site.html
+++ b/templates/site.html
@@ -12,7 +12,9 @@
     <div ng-controller="MediatorCtrl">
       <ul class="stories" class="list-group">
 	<li ng-repeat="story in stories" class="list-group-item">
-	  <h4 class="list-group-item-heading">[[story.Story.Title]]</h4>
+    <h4 class="list-group-item-heading">
+      <a href="[[story.Story.Url]]">[[story.Story.Title]]</a>
+    </h4>
 	  <p class="list-group-item-text">[[story.Story.Description]]</p>
 	  <p class="list-group-item-text">[[story.Count]]</p>
 	</li>
