--- a/templates/site.html
+++ b/templates/site.html
@@ -9,10 +9,20 @@
   </head>
   <body>
     <div id="brand"></div>
-    <div ng-controller="MediatorCtrl">
+    <div ng-controller="MediatorCtrl" class="container">
+      <h1>Stories</h1>
+      <p>
+        Search:
+        <input ng-model="query">
+        Sort by:
+        <select ng-model="orderProp">
+          <option value="-Published">Date Published</option>
+          <option value="-Count"># of Mentions</option>
+        </select>
+      </p>
       <ul class="media-list">
-	<li class="story media" ng-repeat="story in stories | orderBy:'Count':true">
-	  <a class="pull-left" href="[[story.Story.Url]]">
+	<li class="story media" ng-repeat="story in stories | filter:query | orderBy:orderProp">
+	  <a ng-if="[[story.Story.Url]]" class="pull-left" href="[[story.Story.Url]]">
 	    <img class="media-object" ng-src="[[story.Story.ImageUrl]]" alt="...">
 	  </a>
 	  <div class="media-body">
@@ -22,9 +32,11 @@
 	</li>
       </ul>
     </div>
-    <footer>
-      <p class="text-muted credit">Glyphicons by <a href="http://glyphicons.com">GLYPHICONS</a>.</p>
-    </footer>
+    <div class="container">
+      <footer>
+        <p class="text-muted credit">Glyphicons by <a href="http://glyphicons.com">GLYPHICONS</a>.</p>
+      </footer>
+    </div>
   </body>
 </html>{{end}}
 
