Removed ng-if as it creating a $digest loop.

--- a/templates/site.html
+++ b/templates/site.html
@@ -20,7 +20,7 @@
       </p>
       <ul class="media-list">
 	<li class="story media" ng-repeat="story in stories | orderBy:orderProp">
-	  <a ng-if="[[story.Url]]" class="pull-left" href="[[story.Url]]">
+	  <a class="pull-left" href="[[story.Url]]">
 	    <img class="media-object" ng-src="[[story.ImageUrl]]" alt="...">
 	  </a>
 	  <div class="media-body">
