handle broken og:image urls for medium stories that lack a url ; display question mark image for them.

--- a/templates/site.html
+++ b/templates/site.html
@@ -19,15 +19,17 @@
         </select>
       </p>
       <ul class="media-list">
-	<li class="story media" ng-repeat="story in stories | orderBy:orderProp">
-	  <a class="pull-left" href="[[story.Url]]">
-	    <img class="media-object" ng-src="[[story.ImageUrl]]" alt="...">
-	  </a>
-	  <div class="media-body">
-	    <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
-	    <p>[[story.Description]]</p>
-	  </div>
-	</li>
+        <li class="story media" ng-repeat="story in stories | orderBy:orderProp">
+          <a class="pull-left" href="[[story.Url]]" ng-switch on="story.ImageUrl">
+            <img ng-switch-when="" class="media-object" src="/images/question.png" alt="...">
+            <img ng-switch-default class="media-object" ng-src="[[story.ImageUrl]]" alt="...">
+          </a>
+          <div class="media-body">
+            <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
+            <p>[[story.Description]]</p>
+            <p>[[story.Published | date:'medium']]</p>
+          </div>
+        </li>
       </ul>
     </div>
     <div class="container">
