--- a/templates/site.html
+++ b/templates/site.html
@@ -27,7 +27,7 @@
           <div class="media-body">
             <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
             <p>[[story.Description]]</p>
-            <p>[[story.Published | date:'mediumDate']]</p>
+            <p>[[story.Published | date:'medium']]</p>
           </div>
         </li>
       </ul>
