--- a/less/mediator.less
+++ b/less/mediator.less
@@ -18,3 +18,7 @@
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
+body {
+  font-family: "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;
+}
