--- a/templates/site.html
+++ b/templates/site.html
@@ -10,7 +10,9 @@
   <body>
     <div id="brand"></div>
     <div ng-controller="MediatorCtrl" class="container">
-      <h1>Stories</h1>
+      <h1>A Medium Reader</h1>
+      <h4>A look at what Medium stories people are talking about in Twitter.</h4>
+      <hr>
       <p>
         Sort by:
         <select ng-model="orderProp">
