Added sort by Last Mentioned option.

--- a/templates/site.html
+++ b/templates/site.html
@@ -16,6 +16,7 @@
       <p>
         Sort by:
         <select ng-model="orderProp">
+          <option value="-LastMentioned">Date Last Mention</option>          
           <option value="-Published">Date Published</option>
           <option value="-Count"># of Mentions</option>
         </select>
