Tweaks to text and style.

--- a/less/mediator.less
+++ b/less/mediator.less
@@ -1,5 +1,14 @@
 @import "bower_components/bootstrap/less/bootstrap.less";
 
+h1 small {
+   display: block;
+}
+
+.options {
+    background-color: @gray-lighter;
+    padding: 10px;
+}
+
 .media-object {
     width: 120px;
 }
