--- a/templates/site.html
+++ b/templates/site.html
@@ -28,7 +28,7 @@
           <div class="media-body">
             <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
             <p>[[story.Description]]</p>
-            <p><small>Published:</small> [[story.Published | date:'medium']] <small>Mentioned:</small> [[story.Published | date:'medium']]</p>            
+            <p><small>Published:</small> [[story.Published | date:'medium']] <small>Mentioned:</small> [[story.LastMentioned | date:'medium']]</p>
           </div>
         </li>
       </ul>
