Added stay tuned message.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,9 @@
 {{define "content"}}
 
-    <div ng-controller="MediatorCtrl" class="container">
-      <h1>A Medium Reader <small>See what Medium stories people are talking about on Twitter.</small></h1>
+    <article ng-controller="MediatorCtrl" class="mediator">
+      <header>
+        <h1>A Medium Reader <small>See what Medium stories people are talking about on Twitter.</small></h1>
+      </header>
       <p class="options">
         Sort by:
         <select ng-model="orderProp">
@@ -10,19 +12,22 @@
           <option value="-Count"># of Mentions</option>
         </select>
       </p>
-      <ul class="media-list">
-        <li class="story media" ng-repeat="story in stories | orderBy:orderProp">
-          <a class="pull-left" href="[[story.Url]]" ng-switch on="story.ImageUrl">
-            <img ng-switch-when="" class="media-object" src="/images/question.png" alt="...">
-            <img ng-switch-default class="media-object" ng-src="[[story.ImageUrl]]" alt="...">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
-            <p>[[story.Description]]</p>
-            <p><small>Published:</small> [[story.Published | date:'medium']] <small>Mentioned:</small> [[story.LastMentioned | date:'medium']]</p>
-          </div>
-        </li>
-      </ul>
-    </div>
+      <div ng-switch="stories.length>0">
+        <p ng-switch-when="false" class="bg-info lead">Stay tuned for a stream of medium stories being mentioned now on Twitter.</p>
+        <ul ng-switch-when="true" class="media-list">
+          <li class="story media" ng-repeat="story in stories | orderBy:orderProp">
+            <a class="pull-left" href="[[story.Url]]" ng-switch on="story.ImageUrl">
+              <img ng-switch-when="" class="media-object" src="/images/question.png" alt="...">
+              <img ng-switch-default class="media-object" ng-src="[[story.ImageUrl]]" alt="...">
+            </a>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
+              <p>[[story.Description]]</p>
+              <p><small>Published:</small> [[story.Published | date:'medium']] <small>Mentioned:</small> [[story.LastMentioned | date:'medium']]</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </article>
 
 {{end}}
