Changed title to Mediator.

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
     <article ng-controller="MediatorCtrl" class="mediator">
       <header>
-        <h1>A Medium Reader <small>See what Medium stories people are talking about on Twitter.</small></h1>
+        <h1>Mediator <small>See what Medium stories people are talking about on Twitter.</small></h1>
       </header>
       <p class="options">
         Sort by:
