--- a/templates/home.html
+++ b/templates/home.html
@@ -17,18 +17,8 @@
       </p>
       <div ng-switch="stories.length>0">
         <p ng-switch-when="false" class="bg-info lead">Stay tuned for a stream of medium stories being mentioned now on Twitter.</p>
-        <ul ng-switch-when="true" class="media-list">
-          <li class="story media" ng-repeat="story in stories | orderBy:orderProp">
-            <a class="pull-left" href="[[story.Url]]" ng-switch on="story.ImageUrl">
-              <img ng-switch-when="" class="media-object" src="/images/question.png" alt="...">
-              <img ng-switch-default class="media-object" ng-src="[[story.ImageUrl]]" alt="...">
-            </a>
-            <div class="media-body">
-              <h4 class="media-heading"><a href="[[story.Url]]">[[story.Title]]</a> <span class="badge">[[story.Count]]</span></h4>
-              <p>[[story.Description]]</p>
-              <p><small>Published:</small> [[story.Published | date:'medium']] <small>Mentioned:</small> [[story.LastMentioned | date:'medium']]</p>
-            </div>
-          </li>
+        <ul ng-switch-when="true" class="list-unstyled">
+          <li class="story" ng-repeat="story in stories | orderBy:orderProp"><a href="[[story.Url]]"><div style="background-image: url([[story.ImageUrl]]);"><h1>[[story.Title]]<small>[[story.Description]]</small> <span class="badge">[[story.Count]]</span></h1></div></a></li>
         </ul>
       </div>
     </article>
